refactor offer module

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017
+      uri: mongodb://admin:admin@localhost:27017/offers
+
+offer:
+  http:
+    client:
+      config:
+        connectionTimeout: 1000
+        readTimeout: 1000
+        port: 5057
+        uri: http://ec2-3-120-147-150.eu-central-1.compute.amazonaws.com
