--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <assertj-core.version>3.24.2</assertj-core.version>
         <wiremock-jre8-standalone.version>2.35.0</wiremock-jre8-standalone.version>
         <awaitility.version>4.2.0</awaitility.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
     </properties>
 
     <dependencies>
@@ -42,7 +43,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
+<!--       http://localhost:8080/swagger-ui/index.html#/  -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>${springfox-boot-starter.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
