added integration tests and refactor

--- a/src/integration/resources/application-integration.yml
+++ b/src/integration/resources/application-integration.yml
@@ -6,3 +6,8 @@ offer:
 
 scheduling:
   enabled: false
+
+logging:
+  level:
+    org.springframework.web: DEBUG
+#    org.springframework.security: DEBUG
