--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:example@mongo:27017/offers
+      uri: mongodb://admin:admin@localhost:27017/offers
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -18,4 +18,3 @@ offer:
 
 scheduling:
   enabled: true
-
