added sequence id for Offer and refactor

--- a/src/integration/resources/application-integration.yml
+++ b/src/integration/resources/application-integration.yml
@@ -10,4 +10,5 @@ scheduling:
 logging:
   level:
     org.springframework.web: DEBUG
+    org.springframework.data: DEBUG
 #    org.springframework.security: DEBUG
