added redis and integration test

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <awaitility.version>4.2.0</awaitility.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
         <java-jwt.version>4.0.0</java-jwt.version>
+        <jedis.version>3.3.0</jedis.version>
+        <spring-data-redis.version>2.4.5</spring-data-redis.version>
     </properties>
 
     <dependencies>
@@ -58,6 +60,21 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring-data-redis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -122,11 +139,6 @@
             <artifactId>awaitility</artifactId>
             <version>${awaitility.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
-            <version>${java-jwt.version}</version>
         </dependency>
     </dependencies>
 </project>
