--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <java-jwt.version>4.0.0</java-jwt.version>
         <jedis.version>3.3.0</jedis.version>
         <spring-data-redis.version>2.4.5</spring-data-redis.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
 
     <dependencies>
@@ -131,7 +132,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
